--- a/src/css/output.css
+++ b/src/css/output.css
@@ -417,30 +417,17 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink {
     flex-shrink: 1;
   }
-  .flex-grow {
-    flex-grow: 1;
-  }
   .grow {
     flex-grow: 1;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .origin-bottom-left {
     transform-origin: bottom left;
   }
   .origin-top-left {
     transform-origin: top left;
-  }
-  .translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-x-1\/6 {
     --tw-translate-x: calc(1/6 * 100%);
@@ -559,9 +546,6 @@
   .border-green-500 {
     border-color: var(--color-green-500);
   }
-  .border-primary {
-    border-color: var(--color-primary);
-  }
   .border-primary\/50 {
     border-color: color-mix(in srgb, #552523ff 50%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -573,9 +557,6 @@
   }
   .bg-black {
     background-color: var(--color-black);
-  }
-  .bg-primary {
-    background-color: var(--color-primary);
   }
   .bg-primary\/10 {
     background-color: color-mix(in srgb, #552523ff 10%, transparent);
@@ -630,12 +611,6 @@
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
-  }
-  .px-5 {
-    padding-inline: calc(var(--spacing) * 5);
-  }
-  .px-10 {
-    padding-inline: calc(var(--spacing) * 10);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -723,9 +698,6 @@
   .text-pretty {
     text-wrap: pretty;
   }
-  .text-wrap {
-    text-wrap: wrap;
-  }
   .text-active {
     color: var(--color-active);
   }
@@ -776,12 +748,6 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-primary {
-    --tw-shadow-color: #552523ff;
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-primary) var(--tw-shadow-alpha), transparent);
-    }
-  }
   .shadow-primary\/20 {
     --tw-shadow-color: color-mix(in srgb, #552523ff 20%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -815,10 +781,6 @@
   }
   .backdrop-blur-md {
     --tw-backdrop-blur: blur(var(--blur-md));
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -2592,9 +2554,18 @@
 .articles-glider {
   display: flex;
   flex-direction: row;
-  gap: calc(var(--spacing) * 6) !important;
+  gap: calc(var(--spacing) * 0) !important;
+  @media (width >= 40rem) {
+    gap: calc(var(--spacing) * 6) !important;
+  }
   @media (width >= 64rem) {
     gap: calc(var(--spacing) * 8) !important;
+  }
+}
+.glider-track {
+  column-gap: calc(var(--spacing) * 2) !important;
+  @media (width >= 40rem) {
+    gap: 32px !important;
   }
 }
 .card-articles {
@@ -2629,7 +2600,7 @@
   width: 100%;
   flex-direction: column;
   gap: calc(var(--spacing) * 0);
-  column-gap: calc(var(--spacing) * 2);
+  column-gap: calc(var(--spacing) * 0) !important;
   @media (width >= 40rem) {
     column-gap: calc(var(--spacing) * 3);
   }
